test/errors/indexed_offsets_error/zs/equality_operator_in_array_expression_error.zs
package equality_operator_in_array_expression_error;

struct EqualityOperatorInArrayExpressionError
{
    uint32 offsets[];
offsets[@index == 0]:
    string fields[];
};
